--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start:prod" : "NODE_ENV=production node ./src/server.js",
-    "start:dev": "nodemon src/server.js",
-    "lint": "eslint ./"
+    "start:dev": "nodemon ./src/server.js",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
